--- a/src/app/components/main/clanwars/history/history.component.html
+++ b/src/app/components/main/clanwars/history/history.component.html
@@ -1,5 +1,5 @@
 <p-card>
-  <div class="history-filter-card">
+  <div class="history-filter-card  p-fluid">
     <h2>{{ 'clanwars.history.title' | translate }}</h2>
     <app-general-filter [isHistory]="true"></app-general-filter>
     <div class="filters-wrap history-second">
