--- a/src/app/components/main/clanwars/livefeed-filter/livefeed-filter.component.html
+++ b/src/app/components/main/clanwars/livefeed-filter/livefeed-filter.component.html
@@ -1,4 +1,4 @@
-<div class="filters-wrap livefeed">
+<div class="filters-wrap livefeed p-fluid">
 
   <div id="liveUpdate" class="filter-wrap input-switch">
     <p-inputSwitch [formControl]="service.form.liveUpdate"></p-inputSwitch>
