--- a/src/styles/panelStyles/desktop.scss
+++ b/src/styles/panelStyles/desktop.scss
@@ -6,7 +6,7 @@
 
     &.player {
       grid-template-areas: 'name karma pr'
-        '. ovr-winrate ovr-battles'
+        '. acc-winrate acc-battles'
         'ship winrate battles '
         '. wins avg-damage'
         '. avg-frags avg-xp';
@@ -23,7 +23,7 @@
 
     &.no-battles {
       grid-template-areas: 'name karma pr'
-        '. ovr-winrate ovr-battles'
+        '. acc-winrate acc-battles'
         'ship message message '
         '. message message'
         '. message message';
@@ -31,8 +31,8 @@
   }
 
   &.legacy {
-    #wins,
-    #avg-xp {
+    stat-ship-wins,
+    stat-ship-xp {
       display: block;
     }
 
@@ -63,7 +63,7 @@
 
     &.player {
       grid-template-areas:
-        'name karma ovr-battles ovr-winrate .'
+        'name karma acc-battles acc-winrate .'
         'ship pr battles winrate avg-damage';
     }
 
@@ -77,7 +77,7 @@
 
     &.no-battles {
       grid-template-areas:
-        'name karma ovr-battles ovr-winrate .'
+        'name karma acc-battles acc-winrate .'
         'ship message message message message';
     }
   }
